--- a/urbanstory/pages/components/notification.html
+++ b/urbanstory/pages/components/notification.html
@@ -6,7 +6,7 @@
         <h4>Notification <small>(default)</small></h4>
         <div class="notification">
             <div class="card notification-base">
-                <div class="avatar is-sm">
+                <div class="avatar">
                     <img src="https://randomuser.me/api/portraits/men/11.jpg">
                 </div>
                 <div class="notification-content">
@@ -29,56 +29,126 @@
                 </div>
             </div>
         </div>
-        <h4>Notifications bar</h4>
-        <div class="notification">
-            <div class="card notification-base">
-                <div class="avatar">
-                    <img src="https://randomuser.me/api/portraits/men/11.jpg">
-                </div>
-                <div class="notification-content">
-                    <h6>Christopher Clark</h6>
-                    <p>applied <b>Marketing Officer</b></p>
-                    <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+        <h4>Notifications Group</h4>
+        <div class="row">
+            <div class="col-xs-6">
+                <div class="notification-group">
+                    <div class="card notification-base">
+                        <div class="avatar">
+                            <img src="https://randomuser.me/api/portraits/men/11.jpg">
+                        </div>
+                        <div class="notification-content">
+                            <h6>Christopher Clark</h6>
+                            <p>applied <b>Marketing Officer</b></p>
+                            <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                        </div>
+                    </div>
+                    <div class="card notification-base">
+                        <div class="avatar">
+                            <img src="https://randomuser.me/api/portraits/women/8.jpg">
+                        </div>
+                        <div class="notification-content">
+                            <h6>Christopher Clark</h6>
+                            <p>applied <b>Marketing Officer</b></p>
+                            <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                        </div>
+                    </div>
+                    <div class="card notification-base hover">
+                        <div class="avatar">
+                            <img src="https://randomuser.me/api/portraits/men/18.jpg">
+                        </div>
+                        <div class="notification-content">
+                            <h6>Christopher Clark</h6>
+                            <p>applied <b>Marketing Officer</b></p>
+                            <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                        </div>
+                    </div>
+                    <div class="card notification-base">
+                        <div class="avatar">
+                            <img src="https://randomuser.me/api/portraits/women/21.jpg">
+                        </div>
+                        <div class="notification-content">
+                            <h6>Christopher Clark</h6>
+                            <p>applied <b>Marketing Officer</b></p>
+                            <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                        </div>
+                    </div>
+                    <div class="card notification-base">
+                        <div class="avatar">
+                            <img src="https://randomuser.me/api/portraits/men/15.jpg">
+                        </div>
+                        <div class="notification-content">
+                            <h6>Christopher Clark</h6>
+                            <p>applied <b>Marketing Officer</b></p>
+                            <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                        </div>
+                    </div>
+                    <li class="card notification-base">
+                        <p>See all</p>
+                    </li>
                 </div>
             </div>
-            <div class="card notification-base">
-                <div class="avatar">
-                    <img src="https://randomuser.me/api/portraits/men/11.jpg">
-                </div>
-                <div class="notification-content">
-                    <h6>Christopher Clark</h6>
-                    <p>applied <b>Marketing Officer</b></p>
-                    <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
-                </div>
-            </div>
-            <div class="card notification-base hover">
-                <div class="avatar">
-                    <img src="https://randomuser.me/api/portraits/men/11.jpg">
-                </div>
-                <div class="notification-content">
-                    <h6>Christopher Clark</h6>
-                    <p>applied <b>Marketing Officer</b></p>
-                    <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
-                </div>
-            </div>
-            <div class="card notification-base">
-                <div class="avatar">
-                    <img src="https://randomuser.me/api/portraits/men/11.jpg">
-                </div>
-                <div class="notification-content">
-                    <h6>Christopher Clark</h6>
-                    <p>applied <b>Marketing Officer</b></p>
-                    <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
-                </div>
-            </div>
-            <div class="card notification-base">
-                <div class="avatar">
-                    <img src="https://randomuser.me/api/portraits/men/11.jpg">
-                </div>
-                <div class="notification-content">
-                    <h6>Christopher Clark</h6>
-                    <p>applied <b>Marketing Officer</b></p>
-                    <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+            <div clas="col-xs-6">
+                <div class="notification-group">
+                    <div class="card notification-base notification-header">
+                        <p><b>Notifictaions</b></p>
+                        <li>Mark as read</li>
+                    </div>
+                    <div class="notification-container">
+                        <div class="card notification-base un-read">
+                            <div class="avatar">
+                                <img src="https://randomuser.me/api/portraits/men/11.jpg">
+                            </div>
+                            <div class="notification-content">
+                                <h6>Christopher Clark</h6>
+                                <p>applied <b>Marketing Officer</b></p>
+                                <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                            </div>
+                        </div>
+                        <div class="card notification-base">
+                            <div class="avatar">
+                                <img src="https://randomuser.me/api/portraits/men/11.jpg">
+                            </div>
+                            <div class="notification-content">
+                                <h6>Christopher Clark</h6>
+                                <p>applied <b>Marketing Officer</b></p>
+                                <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                            </div>
+                        </div>
+                        <div class="card notification-base hover depth-2">
+                            <div class="avatar">
+                                <img src="https://randomuser.me/api/portraits/men/11.jpg">
+                            </div>
+                            <div class="notification-content">
+                                <h6>Christopher Clark</h6>
+                                <p>applied <b>Marketing Officer</b></p>
+                                <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                            </div>
+                        </div>
+                        <div class="card notification-base">
+                            <div class="avatar">
+                                <img src="https://randomuser.me/api/portraits/men/11.jpg">
+                            </div>
+                            <div class="notification-content">
+                                <h6>Christopher Clark</h6>
+                                <p>applied <b>Marketing Officer</b></p>
+                                <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                            </div>
+                        </div>
+                        <div class="card notification-base">
+                            <div class="avatar">
+                                <img src="https://randomuser.me/api/portraits/men/11.jpg">
+                            </div>
+                            <div class="notification-content">
+                                <h6>Christopher Clark</h6>
+                                <p>applied <b>Marketing Officer</b></p>
+                                <span><i class="icon-clock"></i><p>about 4 hours ago</p></span>
+                            </div>
+                        </div>
+                    </div>
+                    <li class="card notification-base">
+                        <p>See all</p>
+                    </li>
                 </div>
             </div>
         </div>
