--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -3056,19 +3056,24 @@ input[type=checkbox]:focus {
   transition: left 0.2s;
 }
 
-.notification, .notification-group {
+.notification,
+.notification-group {
   width: 280px;
 }
-.notification .card, .notification-group .card {
+.notification .card,
+.notification-group .card {
   box-shadow: none;
   border-radius: 0;
+  word-break: break-all;
 }
-.notification .notification-base, .notification-group .notification-base {
+.notification .notification-base,
+.notification-group .notification-base {
   display: flex;
-  color: #212121;
   padding: 8px;
 }
-.notification .notification-base:hover, .notification .notification-base.hover, .notification-group .notification-base:hover, .notification-group .notification-base.hover {
+.notification .notification-base:hover, .notification .notification-base.hover,
+.notification-group .notification-base:hover,
+.notification-group .notification-base.hover {
   background-color: #f5f5f5;
   -webkit-box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
@@ -3076,36 +3081,42 @@ input[type=checkbox]:focus {
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
-  z-index: 1;
 }
-.notification .notification-base .avatar, .notification-group .notification-base .avatar {
+.notification .notification-base .avatar,
+.notification-group .notification-base .avatar {
   flex: 0 0 auto;
   margin-right: 10px;
 }
-.notification .notification-base .notification-content, .notification-group .notification-base .notification-content {
-  flex: 1 1 auto;
-}
-.notification .notification-base h6, .notification-group .notification-base h6 {
+.notification .notification-base h6,
+.notification .notification-base p,
+.notification-group .notification-base h6,
+.notification-group .notification-base p {
   margin: 0;
+}
+.notification .notification-base h6,
+.notification-group .notification-base h6 {
   line-height: 21px;
 }
-.notification .notification-base p, .notification-group .notification-base p {
-  margin: 0;
-  font-size: 0.75rem;
+.notification .notification-base p,
+.notification-group .notification-base p {
+  font-size: 12px;
   color: #757575;
   line-height: 18px;
 }
-.notification .notification-base span, .notification-group .notification-base span {
+.notification .notification-base span,
+.notification-group .notification-base span {
   margin-top: 4px;
   line-height: 16px;
   display: inline-flex;
-  font-size: 0.6875rem;
+  font-size: 11px;
   color: #a3a3a3;
 }
-.notification .notification-base span i, .notification-group .notification-base span i {
+.notification .notification-base span i,
+.notification-group .notification-base span i {
   margin-top: 3px;
 }
-.notification .notification-base span p, .notification-group .notification-base span p {
+.notification .notification-base span p,
+.notification-group .notification-base span p {
   color: #a3a3a3;
   margin: 0 3px;
 }
