--- a/urbanstory/src/css/sass/composer/style.scss
+++ b/urbanstory/src/css/sass/composer/style.scss
@@ -34,7 +34,7 @@
 @import "../components-global/_steps";
 @import "../components-global/_switch";
 @import "../components-global/_notification";
-
+@import "../components-global/dropdown";
 
 // cards
 @import "../components-global/_img-showcase";
