STyling for dropdown and js but still not working

--- a/urbanstory/pages/components/dropdown.html
+++ b/urbanstory/pages/components/dropdown.html
@@ -17,19 +17,19 @@
             <div class="dropdown-icon is-median"><i class="icon-angle-down"></i></div>
         </div>
         <h4>Dropdowns hover</h4>
-        <li class="has-children is-active">
-            <div class="dropdown-menu has-children is-active">Success
+        <div class="has-children">
+            <div class="dropdown-menu">Success
                 <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
             </div>
-            <ul>
+            <ul class="is-hidden">
                 <li>
-                    <a>Option-1</a>
+                    <a>Option 1</a>
                 </li>
                 <li>
-                    <a>Option-2</a>
+                    <a>Option 2</a>
                 </li>
             </ul>
-        </li>
+        </div>
         
 
     </section>
