--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -3177,6 +3177,7 @@ input[type=checkbox]:focus {
 
 .dropdown-menu,
 .dropdown-icon {
+  position: relative;
   background-color: #f5f5f5;
   font-size: 14px;
   color: #757575;
@@ -3194,36 +3195,42 @@ input[type=checkbox]:focus {
 }
 
 .has-children {
+  cursor: pointer;
+  display: inline-block;
   color: #011148;
   position: relative;
 }
 .has-children ul {
+  margin: 0;
+  padding: 8px 0;
   width: 200px;
   position: absolute;
   z-index: 4;
   display: none;
   background: #ffffff;
-  border-top: solid 1px #ddd;
-  -webkit-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  -o-box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
-  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
+  border: 1px solid rgba(221, 221, 221, 0.1);
+  -webkit-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+  -moz-box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
+  box-shadow: 0 5px 10px 0 rgba(0, 0, 0, 0.2);
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
 }
 .has-children ul li {
+  padding: 0 16px;
   display: block;
   float: none;
   width: 100%;
 }
 .has-children ul li:hover {
-  background: #f5f5f5;
+  background: rgba(0, 0, 0, 0.04);
 }
 .has-children ul li:active {
-  background: #f5f5f5;
+  background: rgba(0, 0, 0, 0.08);
 }
 .has-children ul li a {
+  color: #757575;
+  font-size: 14px;
   display: block;
   line-height: 1em;
   padding-top: 15px;
