--- a/urbanstory/pages/components/dropdown.html
+++ b/urbanstory/pages/components/dropdown.html
@@ -16,19 +16,44 @@
         <div class="dropdown-menu is-median ">Median
             <div class="dropdown-icon is-median"><i class="icon-angle-down"></i></div>
         </div>
-        <h4>Dropdowns hover</h4>
-        <div class="has-children">
-            <div class="dropdown-menu">Success
-                <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+        <h4>Dropdowns clicked</h4>
+        <div class="has-children is-active">
+            <div class="dropdown-menu is-firm">Success
+                <div class="dropdown-icon is-firm"><i class="icon-angle-down"></i></div>
             </div>
-            <ul class="is-hidden">
-                <li>
-                    <a>Option 1</a>
-                </li>
-                <li>
-                    <a>Option 2</a>
-                </li>
-            </ul>
+            <div class="ul-option">
+                <ul class="is-hidden">  
+                    <li>
+                        <a>Option 1</a>
+                    </li>
+                    <li>
+                        <a>Option 2</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="has-children is-active">
+            <div class="dropdown-menu is-median">Success
+                <div class="dropdown-icon is-median"><i class="icon-angle-down"></i></div>
+            </div>
+            <div class="ul-option">
+                <ul class="is-hidden">  
+                    <li>
+                        <a>Option 1</a>
+                    </li>
+                    <li>
+                        <a>Option 2</a>
+                    </li>
+                </ul>
+                <ul class="is-hidden">  
+                    <li>
+                        <a>Option 1</a>
+                    </li>
+                    <li>
+                        <a>Option 2</a>
+                    </li>
+                </ul>
+            </div>
         </div>
         
 
