--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -3057,6 +3057,7 @@ input[type=checkbox]:focus {
   transition: left 0.2s;
 }
 
+/*TESSTTTT*/
 .uh-img-showcase img {
   background: #FFFFFF;
   -webkit-box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.05), 0 10px 20px 0 rgba(0, 0, 0, 0.1);
