Working on jqiery for filtering

--- a/urbanstory/pages/components/dropdown.html
+++ b/urbanstory/pages/components/dropdown.html
@@ -17,45 +17,95 @@
             <div class="dropdown-icon is-median"><i class="icon-angle-down"></i></div>
         </div>
         <h4>Dropdowns clicked</h4>
-        <div class="has-children is-active">
-            <div class="dropdown-menu is-firm">Success
+        <div class="has-children is-active float-right">
+            <div class="dropdown-menu is-firm">Firm
                 <div class="dropdown-icon is-firm"><i class="icon-angle-down"></i></div>
             </div>
             <div class="ul-option">
                 <ul class="is-hidden">  
                     <li>
-                        <a>Option 1</a>
+                        <a href="">Option 1</a>
                     </li>
                     <li>
-                        <a>Option 2</a>
+                        <a href="">Option 2</a>
                     </li>
                 </ul>
             </div>
         </div>
         <div class="has-children is-active">
-            <div class="dropdown-menu is-median">Success
+            <div class="dropdown-menu is-median">Median
                 <div class="dropdown-icon is-median"><i class="icon-angle-down"></i></div>
             </div>
             <div class="ul-option">
                 <ul class="is-hidden">  
                     <li>
-                        <a>Option 1</a>
+                        <a href="">Option 1</a>
                     </li>
                     <li>
-                        <a>Option 2</a>
+                        <a href="">Option 2</a>
                     </li>
                 </ul>
                 <ul class="is-hidden">  
-                    <li>
-                        <a>Option 1</a>
+                    <li class="is-active">
+                        <a href="">Option clicked</a>
                     </li>
-                    <li>
-                        <a>Option 2</a>
+                    <li class="is-hover">
+                        <a href="">Option hovered</a>
                     </li>
                 </ul>
             </div>
-        </div>
-        
-
+        </div> 
+        <h4>Dropdowns contains searchbar</h4>
+        <div class="has-children has-searchbar is-active">
+            <div class="dropdown-menu">Grey
+                <div class="dropdown-icon"><i class="icon-angle-down"></i></div>
+            </div>
+            <div class="ul-option">
+                <ul>  
+                    <li class="dropdown-searchbar">
+                        <div class="card flex">
+                            <input type="text" placeholder="Search...">
+                            <div class="search-icon"><i class="icon-search"></i></div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">Option 2</a>
+                    </li>
+                </ul>
+                <ul>  
+                    <li>
+                        <a href="">Option-1</a>
+                    </li>
+                    <li>
+                        <a href="">Option-2</a>
+                    </li>
+                </ul>
+            </div>
+        </div> 
+        <h4>Dropdowns search demo</h4>
+        <div class="has-children has-searchbar is-active">
+            <div class="dropdown-menu is-success">Grey
+                <div class="dropdown-icon is-success"><i class="icon-angle-down"></i></div>
+            </div>
+            <div class="ul-option">
+                <ul id="myUL">  
+                    <li class="dropdown-searchbar">
+                        <div class="card flex">
+                            <input type="text" id="searchInput" placeholder="Search...">
+                            <div class="search-icon"><i class="icon-search"></i></div>
+                        </div>
+                    </li>
+                    <li>
+                        <a href="">Option 2</a>
+                    </li>  
+                    <li>
+                        <a href="">Option-1</a>
+                    </li>
+                    <li>
+                        <a href="">Option-2</a>
+                    </li>
+                </ul>
+            </div>
+        </div> 
     </section>
 </div>
