--- a/urbanstory/src/css/style.css
+++ b/urbanstory/src/css/style.css
@@ -3222,19 +3222,19 @@ div.has-children .ul-option ul {
 div.has-children .ul-option ul:last-of-type {
   border-bottom: none;
 }
-div.has-children .ul-option ul li:hover {
+div.has-children .ul-option ul li.li-option:hover {
   background: rgba(0, 0, 0, 0.04);
 }
-div.has-children .ul-option ul li.is-active {
+div.has-children .ul-option ul li.li-option.is-active {
   background: rgba(0, 0, 0, 0.08);
 }
-div.has-children .ul-option ul li, div.has-children .ul-option ul .dropdown-searchbar {
-  padding: 0 16px;
+div.has-children .ul-option ul li.li-option, div.has-children .ul-option ul .dropdown-searchbar {
   display: block;
   float: none;
   width: 100%;
 }
-div.has-children .ul-option ul li a, div.has-children .ul-option ul .dropdown-searchbar a {
+div.has-children .ul-option ul li.li-option a, div.has-children .ul-option ul .dropdown-searchbar a {
+  padding: 0 16px;
   color: #757575;
   font-size: 14px;
   display: block;
@@ -3242,11 +3242,17 @@ div.has-children .ul-option ul li a, div.has-children .ul-option ul .dropdown-se
   padding-top: 15px;
   padding-bottom: 15px;
 }
-div.has-children .ul-option ul li a:before, div.has-children .ul-option ul .dropdown-searchbar a:before {
+div.has-children .ul-option ul li.li-option a:before, div.has-children .ul-option ul .dropdown-searchbar a:before {
   display: none;
 }
 
-.has-searchbar .ul-option ul li li:hover {
+.has-searchbar li.dropdown-searchbar {
+  padding: 0 8px;
+}
+.has-searchbar li.dropdown-searchbar:hover {
+  background: white;
+}
+.has-searchbar .ul-option ul li:hover {
   background: #fff;
 }
 .has-searchbar ::placeholder {
